--- a/Web/Areas/Procurement/Views/Bid/EditBidStatus.cshtml
+++ b/Web/Areas/Procurement/Views/Bid/EditBidStatus.cshtml
@@ -2,139 +2,158 @@
 
 @{
     ViewBag.Title = "Edit Bid Document";
-    Layout = "~/Views/Shared/_MainLayout.cshtml";
+
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = "Edit Bid Document";
+    ViewBag.PageTitleDescription = "";
 }
 @section LeftBar
 {
-     @Html.Partial("_BidLeftBar")
+    @Html.Partial("_BidLeftBar")
 }
 @section Toolbar
 {
     <a class="btn toolbar-btn " data-buttontype="btn_save" data-submittedform="frm_edit_bid"></a>
     <a class="btn toolbar-btn " data-buttontype="btn_cancel" href="@Url.Action("Index", "Bid")"></a>
 }
-<div><h4>Bid Document</h4></div>
 
-    @using (Html.BeginForm("EditBidStatus", "Bid", FormMethod.Post, new { id = "frm_edit_bid" }))
-    {
-         @Html.ValidationSummary(true)
-        <div class="form-horizontal ">
-        <fieldset>
-            <legend> Edit Bid </legend>
-            @Html.HiddenFor(model=>model.BidID)
-              @Html.HiddenFor(model=>model.StatusID)
-            <div class="control-group">
-                <div class="control-label">
-                    @Html.LabelFor(model => model.TransportBidPlanID, "Bid Plan")
-                </div>
-                <div class="controls">
-                    @Html.DropDownList("TransportBidPlanID",String.Empty)
-                    @Html.ValidationMessageFor(model => model.TransportBidPlanID)
-                </div>
-            </div>
-            
-            <div class="control-group">
-                <div class="control-label">
-                    @Html.LabelFor(model => model.RegionID, "Region")
-                </div>
-                <div class="controls">
-                    @Html.DropDownList("RegionID",String.Empty)
-                    @Html.ValidationMessageFor(model => model.RegionID)
-                </div>
-            </div>
 
-            <div class="control-group" >
-                <div class="control-label">
-                    @Html.LabelFor(model => model.BidNumber, "Bid Number")
-                </div>
-                <div class="controls">
-                @Html.TextBoxFor(model=>model.BidNumber)
-                @Html.ValidationMessageFor(model => model.BidNumber)
-                 </div>
+@using (Html.BeginForm("EditBidStatus", "Bid", FormMethod.Post, new { id = "frm_edit_bid" }))
+{
+    @Html.ValidationSummary(true)
+    <div class="portlet light bordered">
+        <div class="portlet-title">
+            <div class="caption font-green-haze">
+                <i class="icon-edit font-green-haze"></i>
+                <span class="caption-subject bold uppercase"> Edit Bid</span>
             </div>
-            <div class="control-group">
-                <div class="control-label">
-                    @Html.LabelFor(model => model.StartDate, "Start Date",new {@class="cats-date-pref"})
-                </div>
-                <div class="controls">
-                   @* <input class="cats-datepicker" type="text" id="start" name="start" value="@Model.StartDate"/>*@
-                    @Html.TextBoxFor(model=>model.StartDate,new {@class="cats-datepicker2"})
-                    @Html.ValidationMessageFor(model => model.StartDate)
-                     <div class="input-append bootstrap-timepicker">
-                        <span class="add-on">Time</span>
-                        @Html.TextBoxFor(model=>model.startTime,new { @class = "input-small", id="startTime" })
-                       
+            <div class="actions">
+                <button type="submit" class="btn green" id="save"><i class="fa fa-save"></i> Save</button>
+                <a href="JavaScript:location.reload()" class="btn red" id="cancel"><i class="fa fa-times-circle"></i> Cancel</a>
+                <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
+            </div>
+        </div>
+        <div class="portlet-body">
+            <div class="form-horizontal row ">
+
+                @Html.HiddenFor(model => model.BidID)
+                @Html.HiddenFor(model => model.StatusID)
+                <div class="form-group col-sm-12">
+                    <div class="control-label col-md-3">
+                        @Html.LabelFor(model => model.TransportBidPlanID, "Bid Plan")
+                    </div>
+                    <div class="col-md-3">
+                        @Html.DropDownList("TransportBidPlanID", null, String.Empty, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.TransportBidPlanID)
                     </div>
                 </div>
+                <div class="form-group col-sm-12">
+                    <div class="control-label col-md-3">
+                        @Html.LabelFor(model => model.RegionID, "Region")
+                    </div>
+                    <div class="col-md-3">
+                        @Html.DropDownList("RegionID", null, String.Empty, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.RegionID)
+                    </div>
+                </div>
+                <div class="form-group col-sm-12">
+                    <div class="control-label col-md-3">
+                        @Html.LabelFor(model => model.BidNumber, "Bid Number")
+                    </div>
+                    <div class="col-md-3">
+                        @Html.TextBoxFor(model => model.BidNumber, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.BidNumber)
+                    </div>
+                </div>
+                <div class="form-group col-sm-12">
+                    <div class="control-label col-md-3">
+                        @Html.LabelFor(model => model.StartDate, "Start Date", new { @class = "cats-date-pref" })
+                    </div>
+                    <div class="col-md-7">
+                        @* <input class="cats-datepicker" type="text" id="start" name="start" value="@Model.StartDate"/>*@
+                        <div class="col-md-6">
+                            @Html.TextBoxFor(model => model.StartDate, new { @class = "cats-datepicker2 form-control" })
+                            @Html.ValidationMessageFor(model => model.StartDate)
+                        </div>
+                        <div class="col-md-6">
+                            <div class="input-append bootstrap-timepicker">
+                                <span class="add-on">Time</span>
+                                @Html.TextBoxFor(model => model.startTime, new { @class = "input-small form-control", id = "startTime" })
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="form-group col-sm-12">
+                    <div class="control-label col-md-3">
+                        @Html.LabelFor(model => model.EndDate, "End Date", new { @class = "cats-date-pref" })
+                    </div>
+
+                    <div class="col-md-7">
+                        @*<input class="cats-datepicker" type="text" id="end" name="end" value="@Model.EndDate" />*@
+                        <div class="col-md-6">
+                            @Html.TextBoxFor(model => model.EndDate, new { @class = "cats-datepicker2 form-control" })
+                            @Html.ValidationMessageFor(model => model.EndDate)
+                        </div>
+                        <div class="col-md-6">
+                            <div class="input-prepend " style="margin-right: 2px">
+                                <span class="add-on">Time</span>
+                                @Html.TextBoxFor(m => m.endTime, new { @class = "input-small form-control", id = "endTime" })
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="form-group col-sm-12">
+                    <div class="control-label col-md-3">
+                        @Html.LabelFor(model => model.OpeningDate, "Opening Date", new { @class = "cats-date-pref" })
+                    </div>
+
+                    <div class="col-md-7">
+                        @* <input class="cats-datepicker" type="text" id="open" name="open" value="@Model.OpeningDate"/>*@
+                        <div class="col-md-6">
+                            @Html.TextBoxFor(model => model.OpeningDate, new { @class = "cats-datepicker2 form-control" })
+                            @Html.ValidationMessageFor(model => model.OpeningDate)
+                        </div>
+                        <div class="col-md-6">
+                            <div class="input-prepend " style="margin-right: 2px">
+                                <span class="add-on">Time</span>
+                                @Html.TextBoxFor(m => m.BidOpeningTime, new { @class = "input-small form-control" })
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
-            <div class="control-group">
-                <div class="control-label">
-                     @Html.LabelFor(model => model.EndDate, "End Date",new {@class="cats-date-pref"})
-                </div>
-               
-                <div class="controls">
-                     @*<input class="cats-datepicker" type="text" id="end" name="end" value="@Model.EndDate" />*@
-                    @Html.TextBoxFor(model=>model.EndDate,new {@class="cats-datepicker2"})
-                    @Html.ValidationMessageFor(model => model.EndDate)
-                    <div class="input-prepend " style="margin-right: 2px">
-                        <span class="add-on">Time</span>
-                        @Html.TextBoxFor(m=>m.endTime, new { @class = "input-small", id="endTime" })
-                    </div>
-                
-            </div>
-            <div class="control-group">
-                <div class="control-label">
-                    @Html.LabelFor(model => model.OpeningDate, "Opening Date",new {@class="cats-date-pref"})
-                </div>
-                
-                <div class="controls">
-                    @* <input class="cats-datepicker" type="text" id="open" name="open" value="@Model.OpeningDate"/>*@
-                    @Html.TextBoxFor(model=>model.OpeningDate,new {@class="cats-datepicker2"})
-                    @Html.ValidationMessageFor(model => model.OpeningDate)
-                    <div class="input-prepend " style="margin-right: 2px">
-                        <span class="add-on">Time</span>
-                        @Html.TextBoxFor(m => m.BidOpeningTime, new { @class = "input-small" })
-             
-                    </div>
-                </div>
-               
-            </div>
-            @*<div class="control-group">
-                <div class="control-label">
-                      @Html.LabelFor(model => model.StatusID, "Status")
-                </div>
-              
-                <div class="controls"> @Html.DropDownList("StatusID",String.Empty)
-                @Html.ValidationMessageFor(model => model.StatusID)</div>
-               
-            </div>   *@  
-        </fieldset>
-            </div>
-    }
-<link href="~/Scripts/timepicker/jquery.timepicker.css" rel="stylesheet"/>
+        </div>
+    </div>
+
+}
+<link href="~/Scripts/timepicker/jquery.timepicker.css" rel="stylesheet" />
 <script src="~/Scripts/timepicker/jquery.timepicker.js"></script>
-<script src="~/Scripts/timepicker/jquery.timepicker.min.js"></script>     
+<script src="~/Scripts/timepicker/jquery.timepicker.min.js"></script>
 
 
 
 <script>
-   
-    
+
+
     $('#startTime').timepicker({
         'minTime': '2:00',
         'maxTime': '10:30'
     });
-    
+
     $('#endTime').timepicker({
         'minTime': '2:00',
         'maxTime': '10:30'
     });
-    
+
     $('#BidOpeningTime').timepicker({
         'minTime': '2:00',
         'maxTime': '10:30'
     });
-    
-   
+
+
 </script>
