--- a/Web/Views/Shared/Edit.cshtml
+++ b/Web/Views/Shared/Edit.cshtml
@@ -1,76 +1,70 @@
-
 ﻿@model  Cats.Models.ViewModels.UserPreferenceViewModel
 
 @using Cats.Areas.Settings.Models;
 
-@using (Html.BeginForm("Edit", "UserPreference", FormMethod.Post, new { @class = "form-horizontal" }))
-          {              
-              <!-- Start -->
-              
-    <div class="control-group">
-        <label class="control-label">Language:</label>
-        <div class="controls">
-            @Html.DropDownList("Languages",String.Empty)
-            @Html.ValidationMessageFor(m=>m.Languages)
+@using (Html.BeginForm("Edit", "UserPreference", FormMethod.Post, new { @class = "row form-horizontal", @id="preferenceForm" }))
+{
+
+
+    <div class="from-group col-md-12">
+        <label class="control-label col-md-2">Language:</label>
+        <div class="col-md-3">
+            @Html.DropDownList("Languages", null, String.Empty, new { @class = "form-control", @required = true })
+            <span class="help-block"> @Html.ValidationMessageFor(m => m.Languages)</span>
         </div>
     </div>
 
-
-    <div class="control-group">
-        <label class="control-label">Keyboard:</label>
-        <div class="controls">
-            @Html.DropDownList("KeyboardLanguage",String.Empty)
-            @Html.ValidationMessageFor(m=>m.KeyboardLanguage)
-        </div>
-    </div>
-    
-      <div class="control-group">
-        <label class="control-label">Weight Unit:</label>
-        <div class="controls">
-            @Html.DropDownList("WeightPrefernce", String.Empty)
-            @Html.ValidationMessageFor(m => m.WeightPrefernce)
-        </div>
-    </div>
-    
-    @*<div class="control-group">
-        <label class="control-label">Weight Unit:</label>
-        <div class="controls">
-           @Html.DropDownList("WeightPrefernce")
-           @Html.ValidationMessageFor(m=>m.WeightPrefernce)
-        </div>
-    </div>*@
-
-
-    <div class="control-group">
-        <label class="control-label">Date Preference:</label>
-        <div class="controls">
-            @Html.DropDownList("DateFormatPreference",String.Empty)
-           @Html.ValidationMessageFor(m=>m.DateFormatPreference)
+    <div class="from-group col-md-12">
+        <label class="control-label col-md-2">Keyboard:</label>
+        <div class="col-md-3">
+            @Html.DropDownList("KeyboardLanguage", null, String.Empty, new { @class = "form-control", @required = true })
+            <span class="help-block"> @Html.ValidationMessageFor(m => m.KeyboardLanguage)</span>
         </div>
     </div>
 
-    <div class="control-group">
-        <label class="control-label">Default Theme:</label>
-        <div class="controls">
-            @Html.DropDownList("ThemePreference",String.Empty)
-           @Html.ValidationMessageFor(m=>m.ThemePreference)
+    <div class="from-group col-md-12">
+        <label class="control-label col-md-2">Weight Unit:</label>
+        <div class="col-md-3">
+            @Html.DropDownList("WeightPrefernce", null, String.Empty, new { @class = "form-control", @required = true })
+            <span class="help-block"> @Html.ValidationMessageFor(m => m.WeightPrefernce) </span>
         </div>
     </div>
-                           
-              <!-- End -->
-               <div class="control-group">
-        <label class="control-label"></label>
-        <div class="controls">
+
+    <div class="from-group col-md-12">
+        <label class="control-label col-md-2">Date Preference:</label>
+        <div class="col-md-3">
+            @Html.DropDownList("DateFormatPreference", null, String.Empty, new { @class = "form-control", @required=true })
+            <span class="help-block"> @Html.ValidationMessageFor(m=>m.DateFormatPreference) </span>
+        </div>
+    </div>
+
+    <div class="from-group col-md-12">
+        <label class="control-label col-md-2">Default Theme:</label>
+        <div class="col-md-3">
+            @Html.DropDownList("ThemePreference", null, String.Empty, new { @class = "form-control", @required = true })
+            <span class="help-block">  @Html.ValidationMessageFor(m => m.ThemePreference) </span>
+        </div>
+    </div>
+
+    @*<div class="from-group col-md-12">
+        <label class="control-label col-md-2"></label>
+        <div class="col-md-3">
             <input type="submit" name="EditPreference" class="btn btn-primary" value="Save Preference" />
             <a href="JavaScript:" class="btn" id="cancel">Cancel</a>
         </div>
-    </div>            
-          }
+    </div>*@
+}
 
 <script type="text/javascript">
 
     $('#cancel').click(function () {
         location.reload();
+    });
+
+    $('#save').click(function(e) {
+        e.preventDefault();
+
+        $('#preferenceForm').submit();
     });
 
 </script>
