--- a/Web/Views/Home/GetUnreadNotificationDetail.cshtml
+++ b/Web/Views/Home/GetUnreadNotificationDetail.cshtml
@@ -56,6 +56,6 @@
 
         var url = this.dataItem($(e.currentTarget).closest("tr")).Url;
 
-        window.location.href = "../" + url;
+        window.location.href =url;
     }
 </script>
